<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7E66A83"
    tools:context=".Question1">

    <TextView
        android:id="@+id/textViewq5_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="20dp"
        android:text="@string/quinta_pregunta"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textViewq5_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewq5_2"
        android:layout_width="243dp"
        android:layout_height="60dp"
        android:text="@string/a_qu_comunidad_pertenece_esta_bandera"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewq5_1" />

    <RadioGroup
        android:id="@+id/radioGroupq5"
        android:layout_width="182dp"
        android:layout_height="188dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButtonq5_1"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/madrid"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButtonq5_2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/castilla_la_mancha" />

        <RadioButton
            android:id="@+id/radioButtonq5_3"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:text="@string/castilla_y_le_n" />

        <RadioButton
            android:id="@+id/radioButtonq5_4"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:text="@string/catalu_a"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="201dp"
        android:layout_height="162dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupq5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewq5_2"
        app:srcCompat="@drawable/flag_of_the_community_of_madrid_svg"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/corregir_q5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="108dp"
        android:onClick="Corregir"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>