<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F76AC0E6"
    tools:context=".Question1">

    <TextView
        android:id="@+id/textViewq1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="37dp"
        android:text="@string/primera_pregunta"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textViewq1_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewq1_2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cu_l_es_la_provincia_con_mayor_superficie"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupq1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewq1_1" />

    <RadioGroup
        android:id="@+id/radioGroupq1"
        android:layout_width="252dp"
        android:layout_height="195dp"
        android:layout_marginBottom="166dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewq1_2">

        <RadioButton
            android:id="@+id/radioButtonq1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c_ceres" />

        <RadioButton
            android:id="@+id/radioButtonq1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/badajoz" />

        <RadioButton
            android:id="@+id/radioButtonq1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valladolid" />

        <RadioButton
            android:id="@+id/radioButtonq1_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/granada" />
    </RadioGroup>

    <Button
        android:id="@+id/corregir_q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="92dp"
        android:onClick="Corregir"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupq1"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>